# rust-embedded-template

./: Cargo.toml  memory.x  openocd.gdb
.cargo/: config.toml
src/: main.rs
