[package]
authors = ["MyPledge <pledge1779715457@gmail.com>"]
name = "rust-embedded-template"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "^0.7.4"
cortex-m-rt = "^0.7.0"
cortex-m-semihosting = "^0.3.3"
panic-halt = "^0.2.0"
embedded-hal = "0.2"


[dependencies.stm32f4xx-hal]
version =  "0.13"
features = ["stm32f407"]

[[bin]]
name = "rust-embedded-template"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

